--- a/style.css
+++ b/style.css
@@ -1,56 +1,123 @@
-.navbar{
-    display: flex;
-    align-items:center;
-    justify-content: space-between;
-    background:#fbfaf2;
-    padding:6px 6%;
-    position: sticky;
-    top:0;
-    z-index: 100;
-    box-shadow: 0 5px 10px rgba(0,0,0,0.1);
+@import url("https://use.fontawesome.com/releases/v6.4.2/css/all.css");
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap");
+body {
+  background: #f0be90;
+  color: #030303;
+  font-family: "Montserrat", sans-serif;
+  font-weight: 500;
 }
-
-.logo img{
-    width: 40px;
-    margin-right:15px;
-    border-radius: 30%;
-    display: block;
+/*navigation*/
+.navbar {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  background: #fbfaf2;
+  padding: 6px 6%;
+  position: sticky;
+  top: 0;
+  z-index: 100;
+  box-shadow: 0 5px 10px rgba(0, 0, 0, 0.1);
+}
+.nav-mid {
+  margin-left: 20rem;
 }
 
 .nav-mid ul li {
-    display: inline-block;
-    list-style: none;
+  display: inline-block;
+  list-style: none;
 }
 
 .nav-mid ul li a {
-    display: flex;
-    align-items: center;
-    font-size: 14px;
-    margin: 5px 8px;
-    padding-right: 5px;
-    color: #994F55 ;
+  display: flex;
+  align-items: center;
+  font-size: 14px;
+  margin: 5px 8px;
+  padding-right: 5px;
+  color: #994f55;
+  text-decoration: none;
 }
 
-.nav-mid span{
-    display: flex;
-    flex-direction: column;
-    gap: 5px;
+.nav-mid span {
+  display: flex;
+  flex-direction: column;
+  gap: 5px;
 }
-.nav-mid .fa-solid{
-    align-self: center;
-    color: #dc9858;
-    font-size: 20px;
+.nav-mid .fa-solid {
+  align-self: center;
+  color: #dc9858;
+  font-size: 20px;
 }
-.nav-mid a:hover{
-    font-size: 10px;
-    
+.nav-mid a:hover {
+  font-size: 10px;
 }
 
 .nav-propic {
-    width: 40px;
-    height: 40px;
-    border-radius: 50%;
-    display: block;
-    cursor: pointer;
-    position: relative;
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  display: block;
+  cursor: pointer;
+  position: relative;
+}
+
+/*intro section*/
+.card {
+  width: 900px;
+  background-color: #994f55;
+  border-radius: 14px;
+  display: flex;
+  cursor: pointer;
+  margin-left: 150px;
+  margin-top: 70px;
+}
+#intro img{
+    padding: 10px 65px;
+    transition: transform .3s;
+}
+.content{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    padding: 20px;
+}
+small{
+    font-weight: 700;
+    color: #030303;
+}
+#intro h1{
+    text-wrap: balance;
+    font-size: 65px;
+    font-weight: 700;
+    background: linear-gradient(#f0be90 ,#d47c6f, #dc9858);
+    -webkit-text-fill-color: transparent;
+    -webkit-background-clip: text;
+}
+small a{
+    display: flex;
+    flex-direction: column;
+    color: #fbfaf2;
+    font-size: 25px;
+    text-decoration: none;
+}
+small .fa-solid{
+    margin-left: 70px;
+    color: #994f55;
+    font-size: 40px;
+}
+small .neon{
+    text-shadow: 0 0 .5rem #fff,
+    0 0 1rem #fff,
+    0 0 1.5rem #AD5F65,
+    0 0 2.5rem #AD5F65,
+    0 0 4rem #AD5F65,
+    0 0 5.5rem #AD5F65,
+    0 0 6rem #AD5F65,
+    0 0 9.5rem #994E54
+    ;
+}
+small .neon:hover{
+    color: black;
+}
+.card:hover img{
+    transform: scale(1.02);
 }
