--- a/style.css
+++ b/style.css
@@ -121,3 +121,46 @@ small .neon:hover{
 .card:hover img{
     transform: scale(1.02);
 }
+
+#about-container{
+display: flex;
+flex-direction: column;
+padding: 10px 65px;
+border-radius: 25px;
+}
+
+.about {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background-color: #fff;
+    padding: 20px 6px;
+    margin: 20px;
+    
+
+}
+.about h1{
+    margin: auto;
+}
+.about-content{
+    display: flex;
+  flex-wrap: nowrap; /* Ensures content stays on one line */
+  align-items: center; /* Aligns text vertically */
+  max-width: 80%;
+  margin: 0 auto; /* Centers the section horizontally */
+  background-color: #f2f2f2;
+  border-radius: 25px;
+  justify-content: space-evenly;
+}
+.about-content img{
+    border-radius: 50%;
+    width: 350px;
+    height:350px;
+  object-fit: cover;
+}
+.about-content p{
+    width: 50%;
+  padding-left: 20px; /* Adds space between image and text */
+  font-size: 16px;
+  line-height: 1.5; /* Improves text readability */
+}
