--- a/style.css
+++ b/style.css
@@ -1,7 +1,8 @@
 @import url("https://use.fontawesome.com/releases/v6.4.2/css/all.css");
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap");
 body {
-  background: #f0be90;
+  background: rgb(153,79,85);
+  background: linear-gradient(156deg, rgba(153,79,85,1) 0%, rgba(240,190,144,0.6852941860337884) 53%, rgba(153,79,85,0.5900560907956933) 100%); 
   color: #030303;
   font-family: "Montserrat", sans-serif;
   font-weight: 500;
@@ -74,6 +75,11 @@ body {
   cursor: pointer;
   margin-left: 150px;
   margin-top: 70px;
+  box-shadow: 0px 2px 6px rgba(0, 0, 0, 0.3);
+}
+#intro{
+  display: flex;
+  justify-content: center;
 }
 #intro img{
     padding: 10px 65px;
@@ -89,6 +95,7 @@ small{
     font-weight: 700;
     color: #030303;
 }
+
 #intro h1{
     text-wrap: balance;
     font-size: 65px;
@@ -97,6 +104,7 @@ small{
     -webkit-text-fill-color: transparent;
     -webkit-background-clip: text;
 }
+
 small a{
     display: flex;
     flex-direction: column;
@@ -109,6 +117,7 @@ small .fa-solid{
     color: #994f55;
     font-size: 40px;
 }
+
 small .neon{
     text-shadow: 0 0 .5rem #fff,
     0 0 1rem #fff,
@@ -120,25 +129,41 @@ small .neon{
     0 0 9.5rem #994E54
     ;
 }
+
 small .neon:hover{
     color: black;
 }
 .card:hover img{
     transform: scale(1.02);
 }
+
 /*Features*/
+#features{
+  padding: 20px 6px;
+}
+#features h1{
+  text-align: center;
+}
+/* #features{
+  display: flex;
+  justify-content: center;
+} */
 .feature{
   display: flex;
   flex-direction: row;
-  gap: 13px;
+  justify-content: space-around;
+  padding: 20px 6px;
 
 }
+
 .info-card{
   background-color: #994f55;
   width: 300px;
   padding: 15px;
   border-radius: 20px;
+  box-shadow: 0px 2px 6px rgba(0, 0, 0, 0.3);
 }
+
 .info-card img{
   border-radius: 15px;
   margin-left: -10px;
@@ -146,11 +171,19 @@ small .neon:hover{
   height: 10rem;
 }
 
+/* ---------------------------about section------------------------ */
+
+
 #about-container{
-display: flex;
-flex-direction: column;
-padding: 10px 65px;
-border-radius: 25px;
+  padding: 20px 6%;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  flex-direction: column;
+  border-radius: 25px;
+  align-items: center;
+  margin: 25px 6px;
+  /* height: 1000vh; */
 }
 
 .about {
@@ -159,30 +192,112 @@ border-radius: 25px;
     align-items: center;
     background-color: #fff;
     padding: 20px 6px;
-    margin: 20px;
+    /* margin: 20px; */
     border-radius: 25px;
+    box-shadow: 0px 2px 6px rgba(0, 0, 0, 0.3);
     }
+
 .about h1{
-    margin: auto;
+    margin: 25px 6px;
+
 }
+
 .about-content{
     display: flex;
-  flex-wrap: nowrap; /* Ensures content stays on one line */
-  align-items: center; /* Aligns text vertically */
+  flex-wrap: nowrap; 
+  align-items: center; 
   max-width: 80%;
-  margin: auto; /* Centers the section horizontally */
+  margin: auto; 
   background-color: #f2f2f2;
   justify-content: space-evenly;
-  
 }
+
 .about-content img{
     border-radius: 50%;
     width: 350px;
     height:350px;
   object-fit: cover;
 }
+
 .about-content p{
     width: 50%;
-  padding-left: 20px; /* Adds space between image and text */
+  padding-left: 20px; 
   font-size: 16px;
-  line-height: 1.5; /* Improves text readability */
+  line-height: 1.5;
+}
+
+.team-container{
+  display:flex;
+  /* max-width: 80%; */
+  /* align-items: center; */
+	flex-wrap: wrap;
+	justify-content: space-a;
+	gap: 50px;
+	padding-bottom: 10px;
+  /* box-sizing: border-box; */
+}
+
+.team-card{
+  padding: 20px;
+	width: 300px;
+	box-shadow: 0px 2px 6px rgba(0, 0, 0, 0.3);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin: 10% auto;
+  background-color: #fff;
+  padding: 50px;
+  border-radius: 25px;
+  justify-content:space-evenly;
+  box-sizing: border-box;
+}
+
+.img-area{
+  width: 90px;
+  height: 90px;
+  overflow: hidden;
+  border-radius: 50%;
+  margin-right: 25px;
+}
+.img-area img{
+  width: 100%;
+  transition: transform 0.8s ease-in-out;
+}
+
+.team-card:hover img{
+  transform: scale(1.4);
+  height: auto; 
+  transition: transform 0.8s ease-in-out;
+}
+
+.team-card:hover i{
+  transform: scale(1.1);
+  transform: translate(0,-5px);
+  transition: transform 0.8s ease-in-out;
+}
+.team-card:hover p{
+  color: #f2f2f2;
+  transition: transform 38s ease-in-out;
+}
+.team-card:hover {
+  background:#994E54;
+  color: #f2f2f2;
+  transition: transform 500s ease-in-out;
+}
+.team-card p{
+  margin: 5px 0 0;
+	font-size: 14px;
+	font-weight: 400;
+	color: #333;
+  transition: transform 0.8s ease-in-out;
+}
+i{
+  transition: transform 0.8s ease-in-out;
+  cursor: pointer;
+}
+span{
+  margin-top: 25px;
+}
+.team-card h3{
+  margin: 0;
+}
