--- a/style.css
+++ b/style.css
@@ -1,5 +1,11 @@
 @import url("https://use.fontawesome.com/releases/v6.4.2/css/all.css");
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap");
+*{
+  margin: 0;
+  padding: 0;
+  font-family: 'fantasy', sans-serif;
+  box-sizing: border-box;
+}
 body {
   background: rgb(153,79,85);
   background: linear-gradient(156deg, rgba(153,79,85,1) 0%, rgba(240,190,144,0.6852941860337884) 53%, rgba(153,79,85,0.5900560907956933) 100%); 
@@ -11,21 +17,29 @@ body {
 .navbar {
   display: flex;
   align-items: center;
-  justify-content: space-between;
+  justify-content: space-around;
   background: #fbfaf2;
-  padding: 6px 6%;
+  /* padding: 0px 6%; */
   position: sticky;
   top: 0;
   z-index: 100;
   box-shadow: 0 5px 10px rgba(0, 0, 0, 0.1);
+  box-sizing: border-box;
 }
 .nav-mid {
   margin-left: 20rem;
+  display: flex; 
+  justify-content: center;
 }
-
+.nav-mid ul{
+  display: flex;
+  justify-content: space-between;
+  box-sizing: border-box;
+}
 .nav-mid ul li {
   display: inline-block;
   list-style: none;
+  box-sizing: border-box;
 }
 
 .nav-mid ul li a {
@@ -42,11 +56,13 @@ body {
   display: flex;
   flex-direction: column;
   gap: 5px;
+  box-sizing: border-box;
 }
 .nav-mid .fa-solid {
   align-self: center;
   color: #dc9858;
   font-size: 20px;
+  box-sizing: border-box;
 }
 .nav-mid a:hover {
   font-size: 10px;
@@ -165,7 +181,7 @@ small .neon:hover{
 }
 
 .info-card img{
-  border-radius: 15px;
+  border-radius: 25px;
   margin-left: -10px;
   width: 20rem;
   height: 10rem;
@@ -208,15 +224,15 @@ small .neon:hover{
   align-items: center; 
   max-width: 80%;
   margin: auto; 
-  background-color: #f2f2f2;
+  /* background-color: #f2f2f2; */
   justify-content: space-evenly;
 }
 
 .about-content img{
     border-radius: 50%;
-    width: 350px;
-    height:350px;
-  object-fit: cover;
+    width: 300px;
+    height:300px;
+    margin-bottom: 25px;
 }
 
 .about-content p{
@@ -251,6 +267,14 @@ small .neon:hover{
   justify-content:space-evenly;
   box-sizing: border-box;
 }
+.team-card p{
+  margin: 5px 0 0;
+  font-size: 14px;
+  font-weight: 400;
+  color: #333;
+  text-align: center;
+  transition: transform 0.8s ease-in-out;
+}
 
 .img-area{
   width: 90px;
@@ -283,13 +307,6 @@ small .neon:hover{
   background:#994E54;
   color: #f2f2f2;
   transition: transform 500s ease-in-out;
-}
-.team-card p{
-  margin: 5px 0 0;
-	font-size: 14px;
-	font-weight: 400;
-	color: #333;
-  transition: transform 0.8s ease-in-out;
 }
 i{
   transition: transform 0.8s ease-in-out;
