--- a/style.css
+++ b/style.css
@@ -49,7 +49,8 @@ body {
   font-size: 20px;
 }
 .nav-mid a:hover {
-  font-size: 10px;
+  border-bottom: 5px solid #f0be90;
+  transition: -5s;
 }
 
 .nav-propic {
@@ -69,7 +70,7 @@ body {
 /*intro section*/
 .card {
   width: 900px;
-  background-color: #994f55;
+  background-color: #FFFFFF;
   border-radius: 14px;
   display: flex;
   cursor: pointer;
@@ -108,20 +109,20 @@ small{
 small a{
     display: flex;
     flex-direction: column;
-    color: #fbfaf2;
+    color: #994f55;
     font-size: 25px;
     text-decoration: none;
 }
 small .fa-solid{
     margin-left: 70px;
-    color: #994f55;
+    color: #FFFFFF;
     font-size: 40px;
 }
 
 small .neon{
-    text-shadow: 0 0 .5rem #fff,
-    0 0 1rem #fff,
-    0 0 1.5rem #AD5F65,
+    text-shadow: 0 0 .5rem #dc9858,
+    0 0 1rem #dc9858,
+    0 0 1.5rem #dc9858,
     0 0 2.5rem #AD5F65,
     0 0 4rem #AD5F65,
     0 0 5.5rem #AD5F65,
